--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "apexcharts": "^3.51.0",
+    "axios": "^1.7.7",
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
