--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
+
 {
-  "name": "app",
+  "name": "attithi-mobile-app",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -9,13 +10,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.8.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
+    "expo-router": "^3.5.23",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "^3.15.4",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.34.0",
+    "react-native-svg": "^15.2.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "~0.19.10",
+    "react-native-select-dropdown": "^4.0.1",
+    "react-native-step-indicator": "^1.0.3",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native/metro-config": "^0.75.4"
   },
   "private": true
 }
+
