--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "apexcharts": "^3.51.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
