--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.51.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
