--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.13.3",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
