--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
