--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.13.3",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
