--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sweetalert2/theme-dark": "^5.0.18",
     "apexcharts": "^3.51.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
@@ -26,6 +27,8 @@
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.13.3",
+    "sweetalert2": "^11.14.5",
+    "sweetalert2-react-content": "^5.0.7",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.0-rc.2"
   },
