--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
+    "react-to-print": "^3.0.2",
     "react-toastify": "^10.0.5",
     "recharts": "^2.13.3",
     "sweetalert2": "^11.14.5",
