--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "node-sass": "^9.0.0",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
@@ -26,8 +26,9 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
     "react-to-print": "^3.0.2",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.13.3",
+    "sass": "^1.83.0",
     "sweetalert2": "^11.14.5",
     "sweetalert2-react-content": "^5.0.7",
     "xlsx": "^0.18.5",
