--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^7.4.0",
