--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sweetalert2/theme-dark": "^5.0.18",
+    "@toast-ui/calendar": "^2.1.3",
     "apexcharts": "^3.51.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
